Update style css to fix some position errors

--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ footer button {
   font-weight: 500;
   font-size: 1.7rem;
   border: none;
-  margin-top: 31px;
+  margin-top: 32px;
   cursor: pointer;
   transition: all 0.6s ease-out;
 }
@@ -496,7 +496,7 @@ footer button:active {
 
 .diamond_icon {
   position: absolute;
-  left: px;
+  left: 1px;
   top: 5px;
   width: 28px;
   height: 28px;
