--- a/styles_d.css
+++ b/styles_d.css
@@ -557,3 +557,555 @@ a {
 .about_partners_container {
   display: none;
 }
+
+@media screen and (max-width: 768px) {
+  header {
+    width: 100%;
+    position: fixed;
+    z-index: 99;
+    box-shadow: 0 6px 12px 4px rgba(0, 0, 0, 0.18);
+    display: none;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  .nav_var_mobile {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5%;
+    background-color: rgba(255, 255, 255, 0.925);
+  }
+
+  .burger_icon {
+    display: inline-block;
+    width: 25px;
+    height: 22px;
+    position: fixed;
+    z-index: 99;
+    cursor: pointer;
+  }
+
+  .close_icon {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    z-index: 99;
+    position: fixed;
+    cursor: pointer;
+  }
+
+  .mobile_icon {
+    display: inline-block;
+    height: 30px;
+    z-index: 99;
+    position: fixed;
+    right: 5%;
+    cursor: pointer;
+  }
+
+  .inactive {
+    display: none;
+  }
+
+  .invisible {
+    display: none;
+  }
+
+  .nav_var_list_m {
+    position: fixed;
+    left: 0;
+    top: 0;
+    list-style: none;
+    width: 100%;
+    max-width: 500px;
+    height: 100vh;
+    background-color: #272a31;
+    opacity: 0.99;
+    text-align: left;
+    padding: 10%;
+    font-size: 40px;
+    line-height: 70px;
+    padding-top: 100px;
+    z-index: 98;
+  }
+
+  .nav_list_li_m {
+    margin-top: 30px;
+  }
+
+  .nav_li {
+    color: #ec5242;
+    font-weight: 400;
+  }
+
+  .nav_li:hover {
+    color: #fff;
+    font-weight: 400;
+  }
+
+  .home_section {
+    width: 100%;
+    height: auto;
+    background: url(./assets/images/home_background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .welcome_container {
+    width: 100%;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.925);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 4.5%;
+    padding-top: 60px;
+  }
+
+  .headline_one {
+    color: #eb5234;
+    font-size: 4vw;
+    font-weight: 400;
+  }
+
+  .headline_two {
+    background-image: url(./assets/images/background_r.jpg);
+    display: block;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 8vw;
+    font-weight: 900;
+  }
+
+  .headline_text {
+    width: 100%;
+    max-width: 500px;
+    font-size: 16px;
+    padding: 2%;
+    margin: 15px 0 25px 0;
+    border: solid #fff;
+    color: #3e3e3e;
+    background-color: #f7f7f7;
+  }
+
+  .headline_date {
+    font-size: 3vw;
+    font-weight: 900;
+    color: #3e3e3e;
+    margin-bottom: 10px;
+  }
+
+  .headline_site {
+    color: #3e3e3e;
+    margin-bottom: 50px;
+  }
+
+  .program_section {
+    width: 100%;
+    max-height: 1200px;
+    background-image: url(./assets/images/background_program.jpeg);
+    padding: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .progam_section_title {
+    color: #fff;
+    width: 160px;
+    padding-bottom: 10px;
+    text-align: center;
+    margin-top: 28px;
+  }
+
+  .program_line {
+    width: 30px;
+    border-color: #ec5242;
+  }
+
+  .program_container {
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  .program_container_child {
+    background-color: rgba(255, 255, 255, 0.178);
+    margin: 2px;
+    padding: 15px 5px 15px 5px;
+    text-align: center;
+    margin-bottom: 12px;
+    display: flex;
+    align-items: center;
+    max-width: none;
+  }
+
+  .program_container_child:hover {
+    transform: scale(1.04);
+    border: solid #fff 1px;
+  }
+
+  .program_title {
+    color: #ec5242;
+    margin: 15px 0 15px 0;
+    width: 20%;
+    font-size: 18px;
+  }
+
+  .program_text {
+    color: #fff;
+    width: 60%;
+    text-align: left;
+    font-size: 15px;
+    padding-left: 30px;
+  }
+
+  .program_section_footer {
+    display: none;
+  }
+
+  .program_section_footer_m {
+    color: #fff;
+    background-color: #ec5242;
+    padding: 7%;
+    margin: 35px 0;
+  }
+
+  .ponents_icon {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-image: url(./assets/icons/ponents_icon.png);
+    background-size: cover;
+    margin-right: 10px;
+  }
+
+  .exhibition_icon {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-image: url(./assets/icons/exhibition_icon.png);
+    background-size: cover;
+    margin-right: 10px;
+  }
+
+  .forum_icon {
+    display: inline-block;
+    width: 40px;
+    height: 35px;
+    background-image: url(./assets/icons/forum_icon.png);
+    background-size: cover;
+    margin-right: 10px;
+  }
+
+  .workshop_icon {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-image: url(./assets/icons/workshop_icon.png);
+    background-size: cover;
+    margin-right: 10px;
+  }
+
+  .network_icon {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-image: url(./assets/icons/network_icon.png);
+    background-size: cover;
+    margin-right: 10px;
+  }
+
+  .speakers_section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+  }
+
+  .speakers_sections_title {
+    width: 100%;
+    text-align: center;
+    margin-top: 80px;
+    margin-bottom: 20px;
+    font-size: 28px;
+  }
+
+  .speakers_line {
+    width: 30px;
+    border-color: #ec5242;
+  }
+
+  .speakers_container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 3%;
+    justify-content: center;
+  }
+
+  .speaker {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 38px;
+    text-align: left;
+  }
+
+  .speaker_img_container {
+    position: relative;
+  }
+
+  .speaker_img {
+    width: 120px;
+    height: 120px;
+    position: relative;
+  }
+
+  .speaker_background {
+    display: inline-block;
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    left: -15px;
+    top: -15px;
+  }
+
+  .speaker_info {
+    width: 70%;
+    padding-left: 2%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .speaker_name {
+    margin-bottom: 5px;
+    font-size: 18px;
+  }
+
+  .speaker_title {
+    color: #ec5242;
+    margin-bottom: 10px;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 15px;
+  }
+
+  .speaker_line {
+    width: 20px;
+    margin-bottom: 7px;
+  }
+
+  .speaker_text {
+    font-size: 13px;
+  }
+
+  .partners_container {
+    padding: 0 9px;
+    width: 100%;
+    height: auto;
+    background-color: #272a31;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .partners {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0 65px 0;
+  }
+
+  .pr {
+    height: 35px;
+    display: inline-block;
+    margin: 15px;
+    margin-top: 24px;
+  }
+
+  .last_footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 5%;
+  }
+
+  .footer_logo {
+    display: inline-block;
+    width: 100%;
+    height: 34px;
+    background-image: url(./assets/icons/biotech_logo_black.png);
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .last_footer p {
+    margin-top: 30px;
+    width: 100%;
+    text-align: center;
+  }
+
+  /* About Me Page */
+  .about_container {
+    width: 100%;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.925);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+    padding-top: 50px;
+  }
+
+  .about_title {
+    display: block;
+    color: #ec5242;
+    font-size: 7vw;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  .about_line {
+    width: 25px;
+    border-color: #ec53426c;
+  }
+
+  .about_text {
+    max-width: 100%;
+    line-height: 150%;
+    padding: 10px;
+    margin: 15px 0 25px 0;
+    border: solid #fff;
+    color: #3e3e3e;
+    background-color: rgb(243, 243, 243);
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .about_site {
+    text-align: center;
+  }
+
+  .about_mail {
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 50px;
+  }
+
+  .logo_section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+    text-align: center;
+    border-top: solid #f1f1f1 2px;
+  }
+
+  .logo_title {
+    margin: 20px;
+  }
+
+  .logo_text {
+    margin: 20px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .logo_container {
+    padding: 5%;
+    border: solid #d3d3d3 2px;
+    margin: 24px;
+  }
+
+  .logo {
+    width: 60vw;
+    max-width: 400px;
+  }
+
+  .past_img_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 48px 0;
+  }
+
+  .past_img_one {
+    width: 350px;
+    background-image: url(./assets/images/about_img_one.jpeg);
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    margin-bottom: 24px;
+  }
+
+  .past_img_two {
+    width: 350px;
+    background-image: url(./assets/images/about_img_two.jpeg);
+    background-size: cover;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+  }
+
+  .past_title {
+    font-size: 34px;
+    margin: 24px;
+  }
+
+  .about_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 5%;
+    background-color: #fff;
+  }
+
+  .about_footer p {
+    width: 100%;
+    color: #000;
+    text-align: center;
+  }
+
+  .about_logo {
+    display: inline-block;
+    width: 100%;
+    height: 34px;
+    background-image: url(./assets/icons/biotech_logo_black.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 24px 0;
+  }
+
+  .headline_about {
+    color: #eb5234;
+    font-size: 4vw;
+    font-weight: 500;
+    margin-bottom: 10px;
+  }
+
+  .one {
+    display: none;
+  }
+}
