--- a/styles_d.css
+++ b/styles_d.css
@@ -708,6 +708,7 @@ a {
     height: auto;
     background-image: url(./assets/images/background_program.jpeg);
     padding: 3%;
+    padding-bottom: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -769,6 +770,7 @@ a {
   }
 
   .program_section_footer_m {
+    display: block;
     color: #fff;
     background-color: #ec5242;
     padding: 7%;
